--- a/style.css
+++ b/style.css
@@ -1,3 +1,49 @@
+/* ------------------- */
+/* Custom properties   */
+/* ------------------- */
+
+:root {
+  /* colors */
+  --clr-dark: 230 35% 7%;
+  --clr-light: 231 77% 90%;
+  --clr-white: 0 0% 100%;
+  
+  /* font-sizes */
+  --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
+  --fs-800: 3.5rem;
+  --fs-700: 1.5rem;
+  --fs-600: 1rem;
+  --fs-500: 1rem;
+  --fs-400: 0.9375rem;
+  --fs-300: 1rem;
+  --fs-200: 0.875rem;
+  
+  /* font-families */
+  --ff-serif: "Bellefair", serif;
+  --ff-sans-cond: "Barlow Condensed", sans-serif;
+  --ff-sans-normal: "Barlow", sans-serif;
+}
+
+@media (min-width: 35em) {
+  :root {
+      --fs-800: 5rem;
+      --fs-700: 2.5rem;
+      --fs-600: 1.5rem;
+      --fs-500: 1.25rem;
+      --fs-400: 1rem;
+  }
+}
+
+@media (min-width: 45em) {
+  :root {
+      /* font-sizes */
+      --fs-800: 6.25rem;
+      --fs-700: 3.5rem;
+      --fs-600: 2rem;
+      --fs-500: 1.75rem;
+      --fs-400: 1.125rem;
+  }
+}
 /*? Reset CSS  */
 /* Box sizing rules  */
 *,
@@ -48,4 +94,68 @@ body {
   grid-template-rows: min-content 1fr;
 
   overflow-x: hidden;
+}
+/* make images easier to work with */
+img, picutre {
+    max-width: 100%;
+    display: block;
+}
+
+/* form elements  */
+input,button, textarea, select {
+  font: inherit;
+}
+
+/* remove animation for people who've turn them off  */
+@media (prefers-reduced-motion: reduce) {  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* utility classes  */
+/* general  */
+.flex {
+  display: flex;
+  gap: var(--gap, 1rem);
+
+}
+
+.grid {
+  display: grid;
+  gap: var(--gap, 1rem);
+
+}
+
+.d-block {
+  display: block;
+}
+.flow > *:where(:not(:first-child)) {
+  margin-top: var(--flow-space, 1rem);
+}
+.flow--space-small{
+  --flow-space: .75rem;
+}
+
+.container {
+  padding-inline: 2em;
+    margin-inline: auto;
+    max-width: 80rem;
+}
+/* screen reader only  */
+.sr-only {
+  position: absolute; 
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px; 
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
 }
